--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -1,6 +1,6 @@
 {{ if ($.Page.Params.mermaid) }}
 
-<script async src="/js/mermaid.min.js"></script>
+<script async src="/js/mermaid.min.js" integrity="sha256-e2cddf1797b589644bb6257b9917afee7d7ba002eaa831db5ab36a177febee35"></script>
 <script>mermaid.initialize({startOnLoad:true});</script>
 
 {{ end }}
